--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2018"
 
 [dependencies]
 structopt = "^0.3"
-bloom = "^0.3"
 fastq = "*"
 num-format = "*"
-bio = "*"
 dashmap = "*"
+hdrhistogram = "*"
